# bioinfo-kit

./: README.md  bioinfo-kit.asd  oric.lisp  playground.lisp
cpp/assembly/: CMakeLists.txt  assembly.cc  assembly.h
cpp/comparison/: CMakeLists.txt  edit_dist.cc  fitting_alignment.cc  gap_alignment.cc  global_alignment.cc  lcs.cc  local_alignment.cc  longest_path.cc  manhattan.cc  middle_edge.cc  multiple.cc  overlap.cc
cpp/motif/: .gitignore  CMakeLists.txt  gibbs_motif_search.cc  greedy_motif_search.cc  motifs.h  random_motif_search.cc
lisp/: assembly.lisp  comparison.lisp  eulerian.lisp  motif.lisp  oric.lisp  packages.lisp  pattern-match.lisp  sequence.lisp  utilities.lisp
